SigmaCodebackup3rdSep/objects/Commynity__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Retailer_Community_Plus_User__c</fullName>
        <label>Retailer Community Plus User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Profile__c</fullName>
        <label>Retailer Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SigmaVendor_Profile__c</fullName>
        <label>SigmaVendor Profile</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Community_Plus_User__c</fullName>
        <label>Vendor Community Plus User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Community</label>
</CustomObject>